[gd_scene load_steps=5 format=3 uid="uid://iwf5457qgdi4"]

[ext_resource type="Script" path="res://enemy.gd" id="1_n3duu"]
[ext_resource type="Texture2D" uid="uid://cc1x4x83aokrw" path="res://Assets/kenney_pixel-shmup/Ships/ship_0012.png" id="2_5r13l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hdloh"]
size = Vector2(77, 108)

[sub_resource type="CircleShape2D" id="CircleShape2D_vgstm"]

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_n3duu")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -1.5708
scale = Vector2(3.5, 3.5)
texture = ExtResource("2_5r13l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -1)
shape = SubResource("RectangleShape2D_hdloh")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(60.9831, 51.5448)
shape = SubResource("CircleShape2D_vgstm")

[node name="ShootSpeed" type="Timer" parent="."]
autostart = true

[node name="SpawnPos" type="Marker2D" parent="."]
position = Vector2(-34, 0)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="ShootSpeed" to="." method="_on_shoot_speed_timeout"]
